--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,7 @@ target_compile_features(units INTERFACE cxx_std_20)
 target_link_libraries(units
     INTERFACE
         CONAN_PKG::range-v3
+        CONAN_PKG::fmt
 )
 target_include_directories(units
     INTERFACE
