Downcasting reworked to allow OFF and AUTO modes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,9 @@ project(mp-units
     LANGUAGES CXX
 )
 
+set(DOWNCAST_MODE AUTO CACHE STRING "Select downcasting mode")
+set_property(CACHE DOWNCAST_MODE PROPERTY STRINGS AUTO ON OFF)
+
 # set path to custom cmake modules
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../cmake")
 
@@ -63,6 +66,7 @@ target_include_directories(units
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
         $<INSTALL_INTERFACE:include>
 )
+
 if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
     target_link_libraries(units
         INTERFACE
@@ -86,6 +90,18 @@ elseif(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
         )
     endif()
 endif()
+
+if(DOWNCAST_MODE STREQUAL "AUTO")
+    message(STATUS "Configuring DOWNCAST_MODE=AUTOMATIC")
+    target_compile_definitions(units INTERFACE DOWNCAST_MODE=2)
+elseif(DOWNCAST_MODE)
+    message(STATUS "Configuring DOWNCAST_MODE=ON")
+    target_compile_definitions(units INTERFACE DOWNCAST_MODE=1)
+else()
+    message(STATUS "Configuring DOWNCAST_MODE=OFF")
+    target_compile_definitions(units INTERFACE DOWNCAST_MODE=0)
+endif()
+
 add_library(mp::units ALIAS units)
 
 # installation info
