Linking with Conan targets only when they exists (resolves #98)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,7 +55,7 @@ add_library(units INTERFACE)
 target_compile_features(units INTERFACE cxx_std_20)
 target_link_libraries(units
     INTERFACE
-        CONAN_PKG::fmt
+        $<IF:$<TARGET_EXISTS:CONAN_PKG::fmt>, CONAN_PKG::fmt, fmt::fmt>
 )
 target_include_directories(units
     INTERFACE
@@ -65,7 +65,7 @@ target_include_directories(units
 if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
     target_link_libraries(units
         INTERFACE
-            CONAN_PKG::range-v3
+            $<IF:$<TARGET_EXISTS:CONAN_PKG::range-v3>, CONAN_PKG::range-v3, range-v3::range-v3>
     )
 elseif(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
     target_compile_options(units
@@ -81,7 +81,7 @@ elseif(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
         )
         target_link_libraries(units
             INTERFACE
-                CONAN_PKG::range-v3
+                $<IF:$<TARGET_EXISTS:CONAN_PKG::range-v3>, CONAN_PKG::range-v3, range-v3::range-v3>
         )
     endif()
 endif()
