refactor: `core-io` and `core-fmt` separate modules added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,14 +28,20 @@ project(mp-units
 
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
 
+include(AddUnitsModule)
 include(GNUInstallDirs)
+
 add_subdirectory(core)
+add_subdirectory(core-fmt)
+add_subdirectory(core-io)
 add_subdirectory(systems)
 
 # project-wide wrapper
 add_library(mp-units INTERFACE)
 target_link_libraries(mp-units INTERFACE
     mp-units::core
+    mp-units::core-io
+    mp-units::core-fmt
     mp-units::systems
 )
 add_library(mp-units::mp-units ALIAS mp-units)
