--- a/systems/si-international/CMakeLists.txt
+++ b/systems/si-international/CMakeLists.txt
@@ -22,4 +22,4 @@
 
 cmake_minimum_required(VERSION 3.15)
 
-add_system(si-international mp-units::si)
+add_units_module(si-international mp-units::si)
