build: Added an option to disable UDLs support
Now it is time to get rid of UDLs from tests and examples and then disable them by default.

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -55,6 +55,10 @@ elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
     )
 endif()
 
+if(UNITS_UDLS)
+    target_compile_definitions(mp-units-core INTERFACE UNITS_UDLS=1)
+endif()
+
 if(DEFINED UNITS_DOWNCAST_MODE)
     set(downcast_mode_options OFF ON AUTO)
     list(FIND downcast_mode_options "${UNITS_DOWNCAST_MODE}" downcast_mode)
