--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -55,7 +55,10 @@ elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
     )
 endif()
 
-target_compile_definitions(mp-units-core INTERFACE $<$<BOOL:${UNITS_LITERALS}>:UNITS_LITERALS>)
+target_compile_definitions(mp-units-core INTERFACE
+    $<$<BOOL:${UNITS_REFERENCES}>:UNITS_REFERENCES>
+    $<$<BOOL:${UNITS_LITERALS}>:UNITS_LITERALS>
+)
 
 if(DEFINED UNITS_DOWNCAST_MODE)
     set(downcast_mode_options OFF ON AUTO)
