--- a/systems/isq-iec80000/CMakeLists.txt
+++ b/systems/isq-iec80000/CMakeLists.txt
@@ -22,4 +22,4 @@
 
 cmake_minimum_required(VERSION 3.15)
 
-add_units_system(isq-iec80000 mp-units::si)
+add_units_module(isq-iec80000 mp-units::si)
