feat: `std::format` support for compliant compilers added

--- a/core-fmt/CMakeLists.txt
+++ b/core-fmt/CMakeLists.txt
@@ -22,7 +22,14 @@
 
 cmake_minimum_required(VERSION 3.15)
 
+option(UNITS_USE_LIBFMT "Enables usage of libfmt instead of the one from 'std'" OFF)
+message(STATUS "UNITS_USE_LIBFMT: ${UNITS_USE_LIBFMT}")
+
 # find dependencies
 find_package(fmt CONFIG REQUIRED)
 
-add_units_module(core-fmt mp-units::core fmt::fmt)
+add_units_module(core-fmt mp-units::core)
+if(UNITS_USE_LIBFMT)
+  target_link_libraries(mp-units-core-fmt INTERFACE fmt::fmt)
+  target_compile_definitions(mp-units-core-fmt INTERFACE UNITS_USE_LIBFMT)
+endif()
