build: CMake targets generated by Conan updated

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -37,7 +37,7 @@ check_libcxx_in_use(UNITS_LIBCXX)
 add_library(mp-units-core INTERFACE)
 target_compile_features(mp-units-core INTERFACE cxx_std_20)
 target_link_libraries(mp-units-core INTERFACE
-    gsl::gsl-lite
+    gsl-lite::gsl-lite
 )
 target_include_directories(mp-units-core ${units_as_system} INTERFACE
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
