build: Conan finally fixed gsl-lite
Relates to #318

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -37,7 +37,7 @@ check_libcxx_in_use(${projectPrefix}LIBCXX)
 add_library(mp-units-core INTERFACE)
 target_compile_features(mp-units-core INTERFACE cxx_std_20)
 target_link_libraries(mp-units-core INTERFACE
-    gsl-lite::gsl-lite
+    gsl::gsl-lite
 )
 target_include_directories(mp-units-core ${unitsAsSystem} INTERFACE
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
