build: add support for AppleClang compiler

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -44,7 +44,7 @@ target_include_directories(mp-units-core ${unitsAsSystem} INTERFACE
     $<INSTALL_INTERFACE:include>
 )
 
-if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
     if(${projectPrefix}LIBCXX AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS "14")
         find_package(range-v3 CONFIG REQUIRED)
         target_link_libraries(mp-units-core INTERFACE range-v3::range-v3)
