check: run pre-commit on all files

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -36,12 +36,10 @@ check_libcxx_in_use(${projectPrefix}LIBCXX)
 # core library definition
 add_library(mp-units-core INTERFACE)
 target_compile_features(mp-units-core INTERFACE cxx_std_20)
-target_link_libraries(mp-units-core INTERFACE
-    gsl::gsl-lite
-)
-target_include_directories(mp-units-core ${unitsAsSystem} INTERFACE
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
+target_link_libraries(mp-units-core INTERFACE gsl::gsl-lite)
+target_include_directories(
+    mp-units-core ${unitsAsSystem} INTERFACE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+                                             $<INSTALL_INTERFACE:include>
 )
 
 if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
@@ -50,8 +48,9 @@ if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
         target_link_libraries(mp-units-core INTERFACE range-v3::range-v3)
     endif()
 elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-    target_compile_options(mp-units-core INTERFACE
-        /utf-8  # Specifies both the source character set and the execution character set as UTF-8
+    target_compile_options(
+        mp-units-core
+        INTERFACE /utf-8 # Specifies both the source character set and the execution character set as UTF-8
     )
 endif()
 
@@ -59,7 +58,9 @@ if(DEFINED ${projectPrefix}DOWNCAST_MODE)
     set(downcast_mode_options OFF ON AUTO)
     list(FIND downcast_mode_options "${${projectPrefix}DOWNCAST_MODE}" downcast_mode)
     if(downcast_mode EQUAL -1)
-        message(FATAL_ERROR "'${projectPrefix}DOWNCAST_MODE' should be one of ${downcast_mode_options} ('${${projectPrefix}DOWNCAST_MODE}' received)")
+        message(FATAL_ERROR
+                    "'${projectPrefix}DOWNCAST_MODE' should be one of ${downcast_mode_options} ('${${projectPrefix}DOWNCAST_MODE}' received)"
+        )
     else()
         message(STATUS "${projectPrefix}DOWNCAST_MODE: ${${projectPrefix}DOWNCAST_MODE}")
         target_compile_definitions(mp-units-core INTERFACE ${projectPrefix}DOWNCAST_MODE=${downcast_mode})
